Updated to UBUNTU local machine (directory permissions) with gitify_modx

--- a/.env
+++ b/.env
@@ -10,11 +10,20 @@ NGINX_HOST=localhost
 # See https://hub.docker.com/r/nanoninja/php-fpm/tags/
 PHP_VERSION=latest
 
+SUBNET=10.0.1.0/24
+PRE_MASK=10.0.1
+
+MYSQL_IP=
 # MySQL
-MYSQL_VERSION=5.7.22
 MYSQL_HOST=mysql
+
+MYSQL_VERSION=5.7.22
 MYSQL_DATABASE=test
 MYSQL_ROOT_USER=root
 MYSQL_ROOT_PASSWORD=root
 MYSQL_USER=dev
 MYSQL_PASSWORD=dev
+
+#PORTS
+PMA_PORT=8008
+MYSQL_PORT=8989
