--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,11 @@
 version: '3'
+networks:
+    app_net:
+        driver: bridge
+        ipam:
+            driver: default
+            config:
+            - subnet: ${PRE_MASK}.0/24
 services:
     web:
         image: nginx:alpine
@@ -7,42 +14,42 @@ services:
             - "./etc/ssl:/etc/ssl"
             - "./web:/var/www/html"
             - "./etc/nginx/default.template.conf:/etc/nginx/conf.d/default.template"
-        ports:
-            - "8000:80"
-            - "3000:443"
+        expose:
+            - "80"
+            - "443"
         environment:
             - NGINX_HOST=${NGINX_HOST}
-        command: /bin/sh -c "envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
-        restart: always
+        command: "/bin/sh -c \"envsubst '$$NGINX_HOST' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'\""
+        restart: "no"
         depends_on:
             - php
             - mysqldb
+        networks:
+            app_net:
+                ipv4_address: ${PRE_MASK}.10
     php:
-        image: nanoninja/php-fpm:${PHP_VERSION}
-        restart: always
+        build: ./phpDocker
+        restart: "no"
         volumes:
             - "./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
             - "./web:/var/www/html"
-    composer:
-        image: "composer"
-        volumes:
-            - "./web/app:/app"
-        command: install
+        networks:
+            app_net:
+                ipv4_address: ${PRE_MASK}.10
     myadmin:
         image: phpmyadmin/phpmyadmin
-        container_name: phpmyadmin
         ports:
-            - "8080:80"
+            - "${PMA_PORT}:80"
         environment:
             - PMA_ARBITRARY=1
             - PMA_HOST=${MYSQL_HOST}
-        restart: always
+        restart: "no"
         depends_on:
             - mysqldb
     mysqldb:
         image: mysql:${MYSQL_VERSION}
         container_name: ${MYSQL_HOST}
-        restart: always
+        restart: "no"
         env_file:
             - ".env"
         environment:
@@ -51,6 +58,6 @@ services:
             - MYSQL_USER=${MYSQL_USER}
             - MYSQL_PASSWORD=${MYSQL_PASSWORD}
         ports:
-            - "8989:3306"
+            - "${MYSQL_PORT}:3306"
         volumes:
             - "./data/db/mysql:/var/lib/mysql"
